Add conforming Haskell validator

--- a/mb-validator/Makefile
+++ b/mb-validator/Makefile
@@ -1,4 +1,4 @@
-all: libvm.a
+all: libvm.a validator
 
 clean:
 	rm -f libvm.o libvm.a
@@ -8,3 +8,6 @@ libvm.o: libvm.h libvm.c
 
 libvm.a: libvm.o
 	ar rcs libvm.a libvm.o
+
+validator: VM.hs libvm.o
+	ghc --make -Wall -O2 -L. -lvm -o validator Validator.hs
