Clean more output files

--- a/tools/hs-validator/Makefile
+++ b/tools/hs-validator/Makefile
@@ -1,7 +1,7 @@
 all: libvm.a validator
 
 clean:
-	rm -f libvm.o libvm.a
+	rm -f libvm.o libvm.a VM.hi VM.o Validator.hi Validator.o validator
 
 libvm.o: libvm.h libvm.c
 	gcc -c --std=c99 -Wall -O2 -o libvm.o libvm.c
