Compile libvm with debug symbols

--- a/tools/hs-validator/Makefile
+++ b/tools/hs-validator/Makefile
@@ -4,7 +4,7 @@ clean:
 	rm -f libvm.o libvm.a VM.hi VM.o Validator.hi Validator.o validator
 
 libvm.o: libvm.h libvm.c
-	gcc -c --std=c99 -Wall -O2 -o libvm.o libvm.c
+	gcc -c -g --std=c99 -Wall -O2 -o libvm.o libvm.c
 
 libvm.a: libvm.o
 	ar rcs libvm.a libvm.o
