Re-reorganize source

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,15 @@
 all: lifter validator
 
-vm.o: vm.h vm.c
-	gcc -c -g -DDEBUG --std=c99 -Wall -O2 -o vm.o vm.c
+libvm.o: libvm.h libvm.c
+	gcc -c -g -DDEBUG --std=c99 -Wall -O2 -o libvm.o libvm.c
 
-libvm.a: vm.o
-	ar rcs libvm.a vm.o
+lifter: libvm.o VM.hs Lifter.hs
+	ghc --make -Wall -O2 -o lifter Lifter.hs libvm.o
 
-lifter: libvm.a VM.hs Lifter.hs
-	ghc --make -Wall -O2 -L. -lvm -fforce-recomp -o lifter Lifter.hs
-
-validator: libvm.a VM.hs Validator.hs
-	ghc --make -Wall -O2 -L. -lvm -fforce-recomp -o validator Validator.hs
+validator: libvm.o VM.hs Validator.hs
+	ghc --make -Wall -O2 -o validator Validator.hs libvm.o
 
 clean:
-	rm -f *.a *.hi *.o lifter validator
+	rm -f *.hi *.o lifter validator
 
 .PHONY: all clean
