Fix jmi-lifter compilation

--- a/tools/jmi-lifter/Makefile
+++ b/tools/jmi-lifter/Makefile
@@ -1,2 +1,9 @@
-main:
-	gcc --std=c99 -Wall -O2 -I../../src -o main main.c ../../src/libvm.o
+all: main
+
+main: main.c ../../bin/libdebugvm.o
+	gcc --std=c99 -Wall -O2 -I../../src -o main main.c ../../bin/libdebugvm.o
+
+clean:
+	rm -f main
+
+.PHONY: all clean
